# Flinq

./: .editorconfig  .env.example  .gitignore  AGENTS.md  AGENTS_RU.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  0001_identity.py  0002_lessons_minimal.py  0003_lesson_pipeline.py  0004_dictionary.py  0005_ai_requests.py  0006_reader_state.py  0007_vocabulary_card.py  0008_translation_variants.py  0009_item_provenance.py  0010_phrase_items.py  0011_phrase_text_check.py
backend/src/flinq/: __init__.py  main.py
backend/src/flinq/api/: __init__.py  ai.py  auth.py  dictionary.py  health.py  lessons.py  me.py  reader.py  vocabulary.py
backend/src/flinq/cli/: __init__.py  dictionary.py  identity.py  main.py
backend/src/flinq/core/: __init__.py  config.py  db.py  logging.py  rate_limit.py  redis.py  security.py  textnorm.py
backend/src/flinq/modules/: __init__.py
backend/src/flinq/worker/: __init__.py  broker.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/api/: _reader_helpers.py  test_ai_translate.py  test_auth_login.py  test_auth_logout.py  test_auth_register.py  test_dictionary_lookup.py  test_lessons.py  test_lessons_import.py  test_me_delete.py  test_me_get.py  test_me_last_language.py  test_me_onboarding.py  test_reader_bulk.py  test_reader_content.py  test_reader_positions.py  test_reader_statuses.py  test_segment_translation.py  test_vocabulary.py  test_vocabulary_page.py  test_vocabulary_phrase.py  test_vocabulary_phrases_list.py
backend/tests/cli/: test_dictionary_cli.py
backend/tests/core/: test_rate_limit.py  test_security.py  test_textnorm.py
backend/tests/fixtures/dictionary/: en_english.jsonl  en_russian.jsonl  ru_portuguese.jsonl
backend/tests/integration/: test_auth_flow.py
backend/tests/modules/: test_phrase_item_model.py  test_vocabulary_bulk.py  test_vocabulary_bulk_phrase.py  test_vocabulary_list.py  test_vocabulary_list_phrase.py  test_vocabulary_provenance.py  test_vocabulary_service.py  test_vocabulary_service_phrase.py
backend/tests/modules/ai_translation/: test_models_schema.py  test_prompts.py  test_provider.py  test_sentence_prompt.py  test_service.py
backend/tests/modules/dictionary/: test_download.py  test_import_service.py  test_kaikki.py  test_links.py  (+1 more)
(+189 files in other folders)
